BXMSDOC-1775 Add KIE/BPM Contrib Guide to toc/readme page.

--- a/index.html
+++ b/index.html
@@ -433,6 +433,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel1">
 <li><a href="#amq7">AMQ 7 Contribution Guide</a></li>
 </ul>
+<ul class="sectlevel1">
+<li><a href="#bpm">KIE/BPM Documentation Contributor Guide</a></li>
+</ul>
 </div>
 </div>
 <div id="content">
@@ -450,6 +453,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="paragraph">
 <p>This guide will assist Red Hat writers in contributing to the AMQ 7 documentation. Learn more about AMQ 7 at <a href="https://www.redhat.com/en/technologies/jboss-middleware/amq" target="_blank">redhat.com</a>.</p>
+</div>
+<h2 id="bpm">KIE/BPM</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="bpm/index.html">KIE/BPM Documentation Contributor Guide</a></p>
+</div>
+<div class="paragraph">
+<p>This guide provides information about the source repository for documentation of Drools and jBPM (KIE community software) and Red Hat JBoss BPM Suite and Red Hat JBoss BRMS (Red Hat enterprise products). Learn more about BPM products at <a href="https://www.redhat.com/en/technologies/jboss-middleware/bpm" target="_blank">redhat.com</a>.</p>
 </div>
 </div>
 </div>
