move table of contents to left

--- a/amq7/index.html
+++ b/amq7/index.html
@@ -425,10 +425,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 .show-for-print{display:inherit!important}}
 </style>
 </head>
-<body class="article">
+<body class="article toc2 toc-left">
 <div id="header">
 <h1>AMQ 7 Internal Resources</h1>
-<div id="toc" class="toc">
+<div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#introduction">1. Introduction</a>
@@ -9008,7 +9008,7 @@ To work around this, enable replication between the two IdM servers.</p>
 </ul>
 </div>
 <div class="paragraph">
-<p><em>Revised on 2017-09-19 09:25:51 CDT</em></p>
+<p><em>Revised on 2017-09-27 07:34:51 CDT</em></p>
 </div>
 </div>
 </div>
