update amq guide

--- a/amq7/amq7-styleguide.html
+++ b/amq7/amq7-styleguide.html
@@ -451,7 +451,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="#red-hat-jboss-amq7-conventions">AMQ 7 Terms and Conventions</a></p>
 </li>
 <li>
-<p><a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
+<p><a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
 </li>
 <li>
 <p><a href="https://mojo.redhat.com/docs/DOC-28115" target="_blank" rel="noopener">Red Hat Corporate Style Guide</a></p>
@@ -968,9 +968,104 @@ or topics.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_naming_files">Naming Files</h3>
+<h3 id="punctuation-guide">Styling Punctuation</h3>
+<div class="ulist">
+<div class="title">General Punctuation Guidelines</div>
+<ul>
+<li>
+<p>Do not refer to an individual punctuation mark or special character by its symbol alone.</p>
+</li>
+<li>
+<p>Use the name alone, or use the name followed by the symbol in parentheses.</p>
+</li>
+<li>
+<p>Use the name alone if the punctuation mark or special character is standard, such as a comma or period, and including the symbol would clutter the text.</p>
+</li>
+<li>
+<p>Include the symbol in parentheses when a punctuation mark or special character is not well known or when including the symbol improves clarity.</p>
+</li>
+</ul>
+</div>
 <table class="tableblock frame-all grid-all spread">
-<caption class="title">Table 5. File Names Quick Reference</caption>
+<caption class="title">Table 5. Punctuation Quick Reference</caption>
+<colgroup>
+<col style="width: 30%;">
+<col style="width: 70%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Character</th>
+<th class="tableblock halign-left valign-top">Name</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">&amp;</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Ampersand</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">&lt; &gt;</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Angle brackets, opening angle bracket, or closing angle bracket</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">" "</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Double quotation marks, opening quotation marks, or closing quotation marks (not quotes or quote marks)</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">' '</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Single quotation marks, opening quotation mark,or closing quotation mark (not quotes or quote marks)</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">%</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Percent sign</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">( )</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Parentheses, opening parenthesis, or closing parenthesis</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">$</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Dollar sign</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">*</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Asterisk (not star)</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">#</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Number sign</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">!</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Exclamation point (not exclamation mark or bang)</p>
+</div></div></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="sect2">
+<h3 id="naming-files-style">Naming Files</h3>
+<table class="tableblock frame-all grid-all spread">
+<caption class="title">Table 6. File Names Quick Reference</caption>
 <colgroup>
 <col style="width: 33.3333%;">
 <col style="width: 33.3333%;">
@@ -1028,7 +1123,7 @@ or topics.</p>
 <p><a href="http://titlecase.com">titlecase.com</a></p>
 </li>
 <li>
-<p><a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
+<p><a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
 </li>
 </ul>
 </div>
@@ -1037,7 +1132,7 @@ or topics.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-28 15:49:00 CDT
+Last updated 2017-11-20 08:19:57 CST
 </div>
 </div>
 </body>
