--- a/amq7/index.html
+++ b/amq7/index.html
@@ -453,11 +453,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#contributing-to-docs">3. Contributing to the Documentation</a>
 <ul class="sectlevel2">
-<li><a href="#contribution-getting-started">3.1. Getting Started</a>
-<ul class="sectlevel3">
-<li><a href="#refresh_upstream_content">3.1.1. Refresh Upstream Content</a></li>
-</ul>
-</li>
+<li><a href="#contribution-getting-started">3.1. Getting Started</a></li>
 <li><a href="#contributing">3.2. Contributing to the Documentation</a></li>
 <li><a href="#merging-contributions">3.3. Merging Commits</a></li>
 </ul>
@@ -479,15 +475,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#style-guide">7. Style Guidelines</a>
 <ul class="sectlevel2">
 <li><a href="#style-guides">7.1. Style Guides to Reference</a></li>
-<li><a href="#style-guidelines">7.2. Style Guidelines</a>
-<ul class="sectlevel3">
-<li><a href="#general-styles">7.2.1. General Styles</a></li>
-<li><a href="#headings-titles">7.2.2. Styling Headings and Titles</a></li>
-<li><a href="#styling_replaceables">7.2.3. Styling Replaceables</a></li>
-<li><a href="#styling_links">7.2.4. Styling Links</a></li>
-<li><a href="#naming_files">7.2.5. Naming Files</a></li>
-</ul>
-</li>
+<li><a href="#style-guidelines">7.2. Style Guidelines</a></li>
 <li><a href="#style-references">7.3. See Also</a></li>
 </ul>
 </li>
@@ -495,12 +483,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#information-architecture">9. Information Architecture Guidelines</a>
 <ul class="sectlevel2">
 <li><a href="#architecture-guidelines">9.1. General Guidelines</a></li>
-<li><a href="#book_outlines">9.2. Book Outlines</a>
-<ul class="sectlevel3">
-<li><a href="#client_outline">9.2.1. Client Outline</a></li>
-<li><a href="#server_outline">9.2.2. Server Outline</a></li>
-</ul>
-</li>
+<li><a href="#book_outlines">9.2. Book Outlines</a></li>
 </ul>
 </li>
 <li><a href="#screenshot_guidelines">10. Screenshot Guidelines</a>
@@ -511,30 +494,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#screenshot-accessibility">10.4. Accessibility</a></li>
 <li><a href="#screenshot-asciidoc">10.5. AsciiDoc Syntax</a></li>
 <li><a href="#screenshot-questions">10.6. Additional Questions</a></li>
-<li><a href="#screenshot-extensions">10.7. Browser Extensions</a>
-<ul class="sectlevel3">
-<li><a href="#screenshot-resizing">10.7.1. Resizing Screenshots</a></li>
-</ul>
-</li>
+<li><a href="#screenshot-extensions">10.7. Browser Extensions</a></li>
 </ul>
 </li>
 <li><a href="#doc-admin-guide">11. Administrating AMQ 7 Documentation</a>
 <ul class="sectlevel2">
 <li><a href="#documentation_repositories_2">11.1. Documentation Repositories</a></li>
 <li><a href="#branching_overview">11.2. Branching Overview</a></li>
-<li><a href="#processing_pull_requests">11.3. Processing Pull Requests</a>
-<ul class="sectlevel3">
-<li><a href="#open_the_pull_request">11.3.1. Open the Pull Request</a></li>
-<li><a href="#review_the_pull_request">11.3.2. Review the Pull Request</a></li>
-<li><a href="#merge_the_pull_request">11.3.3. Merge the Pull Request</a></li>
-</ul>
-</li>
-<li><a href="#pushing_to_gitlab_for_doc_builds">11.4. Pushing to GitLab for Doc Builds</a>
-<ul class="sectlevel3">
-<li><a href="#merge-to-github">11.4.1. Merge to the GitHub <code>master</code> branch</a></li>
-<li><a href="#push_to_gitlab">11.4.2. Push to GitLab</a></li>
-</ul>
-</li>
+<li><a href="#processing_pull_requests">11.3. Processing Pull Requests</a></li>
+<li><a href="#pushing_to_gitlab_for_doc_builds">11.4. Pushing to GitLab for Doc Builds</a></li>
 </ul>
 </li>
 <li><a href="#files-and-attributes">Appendix A: Files and Attributes</a>
@@ -568,56 +536,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#modular_docs_guide">Appendix E: Modular Docs Guide</a>
 <ul class="sectlevel2">
 <li><a href="#introduction">E.1. Introduction</a></li>
-<li><a href="#understanding-mod-docs">E.2. Understanding Modular Documentation</a>
-<ul class="sectlevel3">
-<li><a href="#what-modular-documentation-is">E.2.1. What Modular Documentation Is</a></li>
-<li><a href="#what-modular-documentation-is-not">E.2.2. What Modular Documentation Is Not</a></li>
-</ul>
-</li>
-<li><a href="#writing-mod-docs">E.3. Writing Modular Documentation</a>
-<ul class="sectlevel3">
-<li><a href="#creating_modules">E.3.1. Creating Modules</a></li>
-<li><a href="#forming_assemblies">E.3.2. Forming Assemblies</a></li>
-<li><a href="#additional_resources_2">E.3.3. Additional Resources</a></li>
-</ul>
-</li>
+<li><a href="#understanding-mod-docs">E.2. Understanding Modular Documentation</a></li>
+<li><a href="#writing-mod-docs">E.3. Writing Modular Documentation</a></li>
 <li><a href="#modular-docs-terms-definitions">E.4. Modular Documentation Terms and Definitions</a></li>
-<li><a href="#appendix-examples">E.5. Module and Assembly Examples</a>
-<ul class="sectlevel3">
-<li><a href="#modular-docs-concept-examples">E.5.1. Concept Module Examples</a></li>
-<li><a href="#modular-docs-procedure-examples">E.5.2. Procedure Module Examples</a></li>
-<li><a href="#modular-docs-assembly-examples">E.5.3. Assembly Examples</a></li>
-</ul>
-</li>
+<li><a href="#appendix-examples">E.5. Module and Assembly Examples</a></li>
 </ul>
 </li>
 <li><a href="#peer_review_guide">Appendix F: Peer Review Guide</a>
 <ul class="sectlevel2">
-<li><a href="#general-information">F.1. General Information</a>
-<ul class="sectlevel3">
-<li><a href="#how-to-use-this-document">F.1.1. How to Use this Document</a></li>
-<li><a href="#how-to-provide-feedback">F.1.2. How to Provide Feedback</a></li>
-</ul>
-</li>
-<li><a href="#peer-review-framework">F.2. Peer Review Framework</a>
-<ul class="sectlevel3">
-<li><a href="#first-level-issues">F.2.1. First-level Issues</a></li>
-<li><a href="#second-level-issues">F.2.2. Second-level Issues</a></li>
-<li><a href="#third-level-issues">F.2.3. Third-level Issues</a></li>
-<li><a href="#fourth-level-issues">F.2.4. Fourth-level Issues</a></li>
-<li><a href="#other-things-to-review">F.2.5. Other things to review</a></li>
-<li><a href="#real-world-peer-reviews">F.2.6. Real-World Peer Reviews</a></li>
-<li><a href="#additional-resources">F.2.7. Additional Resources</a></li>
-</ul>
-</li>
-<li><a href="#tips-and-tricks">F.3. Peer Review Tips and Tricks</a>
-<ul class="sectlevel3">
-<li><a href="#general-recommendations">F.3.1. General recommendations for peer review</a></li>
-<li><a href="#peer-review-methods">F.3.2. Peer review methods</a></li>
-<li><a href="#miscellaneous">F.3.3. Miscellaneous Tips</a></li>
-<li><a href="#faq">F.3.4. FAQ</a></li>
-</ul>
-</li>
+<li><a href="#general-information">F.1. General Information</a></li>
+<li><a href="#peer-review-framework">F.2. Peer Review Framework</a></li>
+<li><a href="#tips-and-tricks">F.3. Peer Review Tips and Tricks</a></li>
 <li><a href="#peer-review-checklist">F.4. Peer Review Checklist</a></li>
 <li><a href="#about-levels">F.5. About Levels of Issues in the Peer Review Framework</a></li>
 </ul>
@@ -1661,7 +1590,7 @@ $ make refresh-upstream-qpid-proton</code></pre>
 <p><a href="#red-hat-jboss-amq7-conventions">AMQ 7 Terms and Conventions</a></p>
 </li>
 <li>
-<p><a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
+<p><a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
 </li>
 <li>
 <p><a href="https://mojo.redhat.com/docs/DOC-28115" target="_blank" rel="noopener">Red Hat Corporate Style Guide</a></p>
@@ -2176,9 +2105,104 @@ or topics.</p>
 </div>
 </div>
 <div class="sect3">
-<h4 id="naming_files">7.2.5. Naming Files</h4>
+<h4 id="punctuation-guide">7.2.5. Styling Punctuation</h4>
+<div class="ulist">
+<div class="title">General Punctuation Guidelines</div>
+<ul>
+<li>
+<p>Do not refer to an individual punctuation mark or special character by its symbol alone.</p>
+</li>
+<li>
+<p>Use the name alone, or use the name followed by the symbol in parentheses.</p>
+</li>
+<li>
+<p>Use the name alone if the punctuation mark or special character is standard, such as a comma or period, and including the symbol would clutter the text.</p>
+</li>
+<li>
+<p>Include the symbol in parentheses when a punctuation mark or special character is not well known or when including the symbol improves clarity.</p>
+</li>
+</ul>
+</div>
 <table class="tableblock frame-all grid-all spread">
-<caption class="title">Table 5. File Names Quick Reference</caption>
+<caption class="title">Table 5. Punctuation Quick Reference</caption>
+<colgroup>
+<col style="width: 30%;">
+<col style="width: 70%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Character</th>
+<th class="tableblock halign-left valign-top">Name</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">&amp;</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Ampersand</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">&lt; &gt;</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Angle brackets, opening angle bracket, or closing angle bracket</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">" "</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Double quotation marks, opening quotation marks, or closing quotation marks (not quotes or quote marks)</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">' '</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Single quotation marks, opening quotation mark,or closing quotation mark (not quotes or quote marks)</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">%</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Percent sign</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">( )</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Parentheses, opening parenthesis, or closing parenthesis</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">$</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Dollar sign</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">*</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Asterisk (not star)</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">#</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Number sign</p>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">!</p></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>Exclamation point (not exclamation mark or bang)</p>
+</div></div></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="sect3">
+<h4 id="naming-files-style">7.2.6. Naming Files</h4>
+<table class="tableblock frame-all grid-all spread">
+<caption class="title">Table 6. File Names Quick Reference</caption>
 <colgroup>
 <col style="width: 33.3333%;">
 <col style="width: 33.3333%;">
@@ -2234,7 +2258,7 @@ or topics.</p>
 <p><a href="http://titlecase.com">titlecase.com</a></p>
 </li>
 <li>
-<p><a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
+<p><a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
 </li>
 </ul>
 </div>
@@ -2245,7 +2269,7 @@ or topics.</p>
 <h2 id="terms_and_conventions">8. Terms and Conventions</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The following list of Terms and Conventions are specific to AMQ 7.  In addition to this guide, refer to the <a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a> for the usage conventions for the more commonly used documentation terms.</p>
+<p>The following list of Terms and Conventions are specific to AMQ 7.  In addition to this guide, refer to the <a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a> for the usage conventions for the more commonly used documentation terms.</p>
 </div>
 <div id="red-hat-jboss-amq7-conventions" class="paragraph">
 <p>Responsible person: Ben Hardesty (<a href="mailto:bhardest@redhat.com">bhardest@redhat.com</a>)</p>
@@ -5296,7 +5320,7 @@ Architecture Guide</a> for standard book chapters and content.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>{ClientsVersion}</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Clients X.Y version</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">1.1</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.2</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>{ConsoleLongName}</code></p></td>
@@ -8982,7 +9006,7 @@ To work around this, enable replication between the two IdM servers.</p>
 <p><a href="https://gitlab.cee.redhat.com/AMQ7-documentation/amq7-documentation" target="_blank" rel="noopener">AMQ 7 docs repo in GitLab</a></p>
 </li>
 <li>
-<p><a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
+<p><a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
 </li>
 <li>
 <p><a href="https://pantheon.cee.redhat.com/#/help" target="_blank" rel="noopener">Pantheon user guide</a></p>
@@ -9008,7 +9032,7 @@ To work around this, enable replication between the two IdM servers.</p>
 </ul>
 </div>
 <div class="paragraph">
-<p><em>Revised on 2017-09-27 07:34:51 CDT</em></p>
+<p><em>Revised on 2017-11-20 08:20:20 CST</em></p>
 </div>
 </div>
 </div>
@@ -9030,7 +9054,7 @@ To work around this, enable replication between the two IdM servers.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-30 09:53:20 CDT
+Last updated 2017-11-01 11:00:34 CDT
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css">
