--- a/amq7/amq7-additional-resources.html
+++ b/amq7/amq7-additional-resources.html
@@ -436,7 +436,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://gitlab.cee.redhat.com/AMQ7-documentation/amq7-documentation" target="_blank" rel="noopener">AMQ 7 docs repo in GitLab</a></p>
 </li>
 <li>
-<p><a href="http://ccs-jenkins.gsslab.brq.redhat.com:8080/job/glossary-of-terms-and-conventions-for-product-documentation-branch-master/lastSuccessfulBuild/artifact/index.html" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
+<p><a href="https://doc-stage.usersys.redhat.com/documentation/en-us/ccs_internal_documentation/1.0/html-single/glossary_of_terms_and_conventions_for_product_documentation/" target="_blank" rel="noopener">Red Hat Glossary of Terms and Conventions</a></p>
 </li>
 <li>
 <p><a href="https://pantheon.cee.redhat.com/#/help" target="_blank" rel="noopener">Pantheon user guide</a></p>
@@ -464,7 +464,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-23 07:51:59 CDT
+Last updated 2017-11-01 11:00:34 CDT
 </div>
 </div>
 </body>
