Add Google Analytics Tracking

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@ a {
     list-style-type: none;
 }
 </style>
+<!-- GOOGLE ANALYTICS -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145302190-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145302190-2');
+</script>
+<!-- END GOOGLE ANALYTICS -->
 </head>
 <body>
 <div id="content">
