Add link to Glossary of Terms and Conventions
Link from https://redhat-documentation.github.io/

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@ a {
 
   <p>A Red Hat guide to assist enterprise projects in collaborating with upstream communities on documentation.</p>
 
+  <h2 id="glossary-of-terms-and-conventions-for-product-documentation">Glossary of Terms and Conventions for Product Documentation</h2>
+
+  <p><a href="https://redhat-documentation.github.io/glossary-of-terms-and-conventions-for-product-documentation/">Glossary of Terms and Conventions for Product Documentation</a></p>
+
+  <p>This document outlines terms and conventions for technical language in Red Hat's product documentation and other technical content. These terms and conventions supplement those in The IBM Style Guide, which is the main reference for technical terms.</p>
+
   <h2 id="modular-documentation-project">Modular Documentation Project</h2>
 
   <p><a href="https://redhat-documentation.github.io/modular-docs/">Modular Documentation Reference Guide</a></p>
