chore: add Vale at Red Hat

--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@ a {
 
   <p>This guide provides information about the source repository for documentation of Drools and jBPM (KIE community software) and Red Hat JBoss BPM Suite and Red Hat JBoss BRMS (Red Hat enterprise products). Learn more about BPM products at <a href="https://www.redhat.com/en/technologies/jboss-middleware/bpm" target="_blank">redhat.com</a>.</p>
 
+  <h2 id="vale-at-red-hat">Vale at Red Hat</h2>
+
+  <p><a href="https://redhat-documentation.github.io/vale-at-red-hat/">Vale at Red Hat</a></p>
+
+  <p>Using Vale at Red Hat.</p>
+
+    
+    
 </div>
 
 </body>
