12  Fix broken link to Glossary; add link to Style guide

--- a/index.html
+++ b/index.html
@@ -101,11 +101,17 @@ a {
 
   <p>A Red Hat guide to assist enterprise projects in collaborating with upstream communities on documentation.</p>
 
+  <h2 id="supplementary-style-guide-for-product-documentation">Red Hat supplementary style guide for product documentation</h2>
+
+  <p><a href="https://redhat-documentation.github.io/supplementary-style-guide/#introduction">Red Hat supplementary style guide for product documentation</a></p>
+
+  <p>This guide provides style guidelines and preferred term usage for Red Hat product and cross-product solution documentation. It is intended to be used as a supplement to the IBM Style Guide, which is the primary source of style guidance for Red Hat product documentation.</p>
+
   <h2 id="glossary-of-terms-and-conventions-for-product-documentation">Glossary of Terms and Conventions for Product Documentation</h2>
 
-  <p><a href="https://redhat-documentation.github.io/glossary-of-terms-and-conventions-for-product-documentation/">Glossary of Terms and Conventions for Product Documentation</a></p>
+  <p><a href="https://redhat-documentation.github.io/supplementary-style-guide/#glossary-terms-conventions">Glossary of Terms and Conventions for Product Documentation</a></p>
 
-  <p>This document outlines terms and conventions for technical language in Red Hat's product documentation and other technical content. These terms and conventions supplement those in The IBM Style Guide, which is the main reference for technical terms.</p>
+  <p>This glossary outlines terms and conventions for technical language in Red Hat's product documentation and other technical content. These terms and conventions supplement those in The IBM Style Guide, which is the main reference for technical terms. The glossary is a sectin within the Red Hat supplementary style guide for product documentation</p>
 
   <h2 id="modular-documentation-project">Modular Documentation Project</h2>
 
@@ -131,8 +137,8 @@ a {
 
   <p>Using Vale at Red Hat.</p>
 
-    
-    
+
+
 </div>
 
 </body>
