--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ a {
 
   <p>This guide provides style guidelines for Red Hat product and cross-product solution documentation. It is intended to be used as a supplement to the IBM Style Guide, which is the primary source of style guidance for Red Hat product documentation.</p>
 
-  <p>The style guide also includes the <a href="https://redhat-documentation.github.io/supplementary-style-guide/#glossary-terms-conventions">Glossary of terms and conventions</a>,which outlines terms and conventions for technical language in Red Hat's product documentation and other technical content. These terms and conventions supplement those in The IBM Style Guide, which is the main reference for technical terms.</p>
+  <p>The style guide also includes the <a href="https://redhat-documentation.github.io/supplementary-style-guide/#glossary-terms-conventions">Glossary of terms and conventions</a>, which outlines terms and conventions for technical language in Red Hat's product documentation and other technical content. These terms and conventions supplement those in the IBM Style Guide, which is the main reference for technical terms.</p>
 
   <h2 id="modular-documentation-project">Modular Documentation Project</h2>
 
