Adding the new peer review guide to the landing page

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@ a {
 
   <p>Modular Documentation Project provides guidelines and examples for writing technical documentation using a modular framework.</p>
 
+  <h2 id="peer-review">Red Hat peer review guide for technical documentation</h2>
+
+  <p><a href="https://redhat-documentation.github.io/peer-review/">Red Hat peer review guide for technical documentation</a></p>
+
+  <p>This guide provides guidelines for peer reviewing Red Hat technical documentation.</p>
+
   <h2 id="amq7">Red Hat JBoss AMQ 7</h2>
 
   <p><a href="https://redhat-documentation.github.io/doc-guidelines/amq7/">Red Hat JBoss AMQ 7 Internal Resources Guide</a></p>
